--- a/src/scss/tabulator.scss
+++ b/src/scss/tabulator.scss
@@ -100,76 +100,76 @@
       position: relative;
       padding:4px;
       
-      // header menu button 
-      .tabulator-header-popup-button{
-        padding: 0 8px;
-        
-        &:hover{
-          cursor: pointer;
-          opacity: .6;
-        }
+      
+    }
+    // header menu button 
+    .tabulator-header-popup-button{
+      padding: 0 8px;
+      
+      &:hover{
+        cursor: pointer;
+        opacity: .6;
+      }
+    }
+    
+    // hold title and sort arrow 
+    .tabulator-col-title-holder{
+      position: relative;
+    }
+    
+    // hold title of column header 
+    .tabulator-col-title{
+      box-sizing:border-box;
+      width: 100%;
+      
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      vertical-align:bottom;
+
+      &.tabulator-col-title-wrap{
+        white-space: normal;
+        text-overflow: initial;
       }
       
-      // hold title and sort arrow 
-      .tabulator-col-title-holder{
-        position: relative;
-      }
-      
-      // hold title of column header 
-      .tabulator-col-title{
-        box-sizing:border-box;
+      // element to hold title editor 
+      .tabulator-title-editor{
+        box-sizing: border-box;
         width: 100%;
         
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        vertical-align:bottom;
-
-        &.tabulator-col-title-wrap{
-          white-space: normal;
-          text-overflow: initial;
-        }
+        border:1px solid var(--accent-neutral-4);
         
-        // element to hold title editor 
-        .tabulator-title-editor{
-          box-sizing: border-box;
-          width: 100%;
-          
-          border:1px solid var(--accent-neutral-4);
-          
-          padding:1px;
-          
-          background: var(--accent-neutral-1);
-        }
+        padding:1px;
         
-        .tabulator-header-popup-button + .tabulator-title-editor{
-          width:calc(100% - 22px);
-        }
+        background: var(--accent-neutral-1);
       }
       
-      // column sorter arrow 
-      .tabulator-col-sorter{
-        display: flex;
-        align-items: center;
-        
-        position: absolute;
-        top:0;
-        bottom:0;
-        right:4px;
-        
-        .tabulator-arrow{
-          width: 0;
-          height: 0;
-          border-left: 6px solid transparent;
-          border-right: 6px solid transparent;
-          border-bottom: 6px solid var(--sort-arrow-inactive);
-        }
+      .tabulator-header-popup-button + .tabulator-title-editor{
+        width:calc(100% - 22px);
       }
+    }
+    
+    // column sorter arrow 
+    .tabulator-col-sorter{
+      display: flex;
+      align-items: center;
       
+      position: absolute;
+      top:0;
+      bottom:0;
+      right:4px;
+      
+      .tabulator-arrow{
+        width: 0;
+        height: 0;
+        border-left: 6px solid transparent;
+        border-right: 6px solid transparent;
+        border-bottom: 6px solid var(--sort-arrow-inactive);
+      }
     }
     
     // complex header column group 
-    &.tabulator-col-group{
+    &-group{
       
       // gelement to hold sub columns in column group 
       .tabulator-col-group-cols{
@@ -529,9 +529,6 @@
     
   }
   
-  
-  
-  
   &-selectable:hover{
     background-color:var(--row-hover-bg);
     cursor: pointer;
@@ -557,32 +554,6 @@
     z-index:15;
   }
   
-  &-responsive-collapse{
-    box-sizing:border-box;
-    
-    padding:5px;
-    
-    border-top:1px solid var(--row-border-color);
-    border-bottom:1px solid var(--row-border-color);
-    
-    &:empty{
-      display:none;
-    }
-    
-    table{
-      font-size:var(--text-size);
-      
-      tr{
-        td{
-          position: relative;
-          
-          &:first-of-type{
-            padding-right:10px;
-          }
-        }
-      }
-    }
-  }
   
   // cell element 
   &-cell{
@@ -606,11 +577,11 @@
       
       z-index: 10;
       
-      &.tabulator-frozen-left{
+      &-left{
         border-right:2px solid var(--row-border-color);
       }
       
-      &.tabulator-frozen-right{
+      &-right{
         border-left:2px solid var(--row-border-color);
       }
     }
@@ -639,75 +610,17 @@
       }
     }
     
-    // movable row handle 
-    &.tabulator-row-handle{
-      display: inline-flex;
-      align-items:center;
-      justify-content:center;
-      user-select: none;
-      
-      // handle holder 
-      .tabulator-row-handle-box{
-        width:80%;
-        
-        // Hamburger element 
-        .tabulator-row-handle-bar{
-          width:100%;
-          height:3px;
-          margin-top:2px;
-          background: var(--accent-neutral-4);
-        }
-      }
-    }
     
     
-    .tabulator-responsive-collapse-toggle{
-      display: inline-flex;
-      align-items:center;
-      justify-content:center;
-      user-select: none;
-      
-      height:15px;
-      width:15px;
-      
-      border-radius:20px;
-      background:var(--accent-neutral-4);
-      
-      color:var(--row-bg-color);
-      font-weight:bold;
-      font-size:1.1em;
-      
-      &:hover{
-        opacity:.7;
-        cursor: pointer;
-      }
-      
-      &.open{
-        .tabulator-responsive-collapse-toggle-close{
-          display:initial;
-        }
-        
-        .tabulator-responsive-collapse-toggle-open{
-          display:none;
-        }
-      }
-
-      svg{
-        stroke:var(--row-bg-color);
-      }
-      
-      .tabulator-responsive-collapse-toggle-close{
-        display:none;
-      }
-    }
+  }
+  
+  
+  &-traffic-light{
+    display: inline-block;
+    height:14px;
+    width:14px;
     
-    .tabulator-traffic-light{
-      display: inline-block;
-      height:14px;
-      width:14px;
-      
-      border-radius:14px;
-    }
+    border-radius:14px;
   }
   
 
